mspmc-capauno/kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: mspmccapauno
  labels:
    app: mspmccapauno    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: mspmccapauno
