mspmc-capauno/kubernetes/Gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mspmccapauno-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mspmccapauno-gateway
spec:
  hosts:
  - "*"
  gateways:
  - mspmccapauno-gateway
  http:
  - match:
    - uri:
        prefix: /mspmccapauno
    rewrite:
      uri: /
    route:
    - destination:
        host: mspmccapauno
        port:
          number: 8080
